# xmobar-calendar-plugin

./: LICENSE  README.md  xmobar-calendar-plugin.cabal
src/Xmobar/Plugins/: Calendar.hs
