cabal-version:       >=1.10
name:                xmobar-calendar-plugin
synopsis:            Calendar event notifier for Xmobar
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Daniel Reimer
maintainer:          daniel.k.reimer97@gmail.com
category:            System
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:
    Xmobar.Plugins.Calendar
  hs-source-dirs: src
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall -Werror -freverse-errors
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , containers -any
                     , data-default -any
                     , iCalendar == 0.4.0.5
                     , process -any
                     , relude -any
                     , time -any
                     , xmobar -any
